# brain-tumor-detection

./: .gitignore  EXPERIMENT_LOGS.md  LICENSE  README.md  download_dataset.py  evaluate.py  pyproject.toml  requirements.txt  train.py
data/processed/: test_preprocessed.csv  test_split.csv  train_preprocessed.csv  train_split.csv  val_preprocessed.csv  val_split.csv
results/classical_ml/hog_svm/: hog_svm_log.txt  predictions_test.csv  predictions_train.csv  predictions_val.csv  scaler.pkl  summary_metrics.csv
results/otsu_baseline/: otsu_failed_examples.csv  otsu_feature_summary.csv  otsu_metrics.txt  otsu_predictions.csv
src/baseline/: otsu_baseline.py
src/classical_ml/: hog_svm.py  hog_svm_eski.py
src/cnnModel/: baseline_cnn.py  evaluate.py  train.py
src/data/: data_inspect.py  dataloaders.py  dataset.py  download.py  inspect.py  inspect_dataset.py  prepare_pipeline.py  run_preprocessing.py  test_dataset.py
src/models/: evaluate.py  train.py
